@@ -9,8 +9,8 @@ import java.io.IOException;
 import java.io.OutputStream;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.util.*;
-import java.util.stream.Collectors;
+import java.util.Collection;
+import java.util.List;
 import java.util.stream.Stream;
 
 import static java.nio.file.StandardOpenOption.CREATE;
@@ -18,7 +18,7 @@ import static java.nio.file.StandardOpenOption.CREATE;
 public class AwardsResults {
 
     final List<AwardsResult> results;
-    private String schoolName;
+    private final String schoolName;
 
     public AwardsResults(Collection<AwardsResult> c, String schoolName) {
         this.schoolName = schoolName;
@@ -32,7 +32,7 @@ public class AwardsResults {
                         return Stream.of(awardsResult);
                     }
                 }
-        ).collect(Collectors.toList());
+        ).toList();
     }
 
     public File toSpreadsheet(){
