@@ -1,28 +1,14 @@
 package org.nycfl.certificates;
 
-import javax.json.bind.annotation.JsonbCreator;
-import javax.json.bind.annotation.JsonbProperty;
 import java.util.Arrays;
 import java.util.List;
-import java.util.stream.Collectors;
 
-public class EventList {
-    public final long tournamentId;
-    public final String events;
-
-    @JsonbCreator
-    public EventList(
-            @JsonbProperty("events") String events,
-            @JsonbProperty("tournamentId") long id) {
-        this.events = events;
-        this.tournamentId = id;
-    }
-
+public record EventList(String events, long tournamentId) {
     public List<Event> getEvents() {
         return Arrays
-                .stream(events.split("\n"))
-                .sorted()
-                .map(Event::fromName)
-                .collect(Collectors.toList());
+            .stream(events.split("\n"))
+            .sorted()
+            .map(Event::fromName)
+            .toList();
     }
 }
