@@ -3,6 +3,7 @@ package org.nycfl.certificates.slides;
 import io.quarkus.qute.Template;
 import io.quarkus.qute.TemplateExtension;
 import org.nycfl.certificates.*;
+import org.nycfl.certificates.results.Result;
 
 import javax.enterprise.context.ApplicationScoped;
 import javax.inject.Inject;
@@ -12,7 +13,7 @@ import java.util.stream.Collectors;
 
 @ApplicationScoped
 @TemplateExtension
-public class PostingsBuilder extends BaseAnimatedSlideBuilder {
+public class PostingsBuilder implements BaseAnimatedSlideBuilder {
 
   @Inject
   Template postings;
@@ -21,7 +22,7 @@ public class PostingsBuilder extends BaseAnimatedSlideBuilder {
   Template posting;
 
   @Override
-  Map<String, String> buildSlides(Tournament tournament) {
+  public Map<String, String> buildSlides(Tournament tournament) {
     Map<String, String> slides = new LinkedHashMap<>();
     for (Event event : tournament.getEvents()) {
           if (event.getEventType() != EventType.DEBATE_SPEAKS) {
@@ -41,7 +42,7 @@ public class PostingsBuilder extends BaseAnimatedSlideBuilder {
                       .stream()
                       .filter(r -> breakLevel == r.getEliminationRound())
                       .sorted(Comparator.comparing(Result::getCode))
-                      .collect(Collectors.toList());
+                      .toList();
 
             if(!highestElimResults.isEmpty()) {
                 final AtomicInteger counter = new AtomicInteger();
